--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /codes/project_capsCC/venv
 /codes/project_capsCC/BuyGoods/migrations
 /codes/project_capsCC/restful/migrations
+/codes/**/__pycache__/
 *.pyc
