--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ codes/project_capsCC/restful/migrations
 codes/**/__pycache__/
 *.pyc
 *.xml
-.idea/
+.idea/**/*.xml
 codes/**/.idea
 codes/**/venv
 codes/**/env
 codes/**/venv
+
